# IA_version1

./: CMakeLists.txt  CMakeLists.txt.user.e1ba03a  main.cc  moteurdinference.cc  moteurdinference.hh  regle.cc  regle.hh
